# Orchids_Cloning_Agent

./: .gitignore  README.md  project-structure.txt  requirements.txt
backend/: main.py  pyproject.toml
frontend/: README.md
frontend/src/app/: page.tsx
